# udemy-python

./: .gitignore  README.md  pyproject.toml  settings.json
exercises/udemy_c1_e1/: __init__.py  __main__.py  udemy.py
exercises/udemy_python/: udemy.py
exercises/wil1/: __init__.py  __main__.py  what.py
