[project]
name = "udemy-python"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
udemy-python = "exercises.udemy_python:app"
udemy-c1-e1  = "exercises.udemy_c1_e1:app"
wil1         = "exercises.wil1:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
